# MV-Design-PRO-Cloude

./: .gitignore  CLAUDE.md  README.md
mv-design-pro/backend/: .dockerignore  Dockerfile  README.md  mv_design_pro.db  mypy_report.txt  pyproject.toml  pytest_report.txt
mv-design-pro/backend/schemas/: add_load_to_feeder_nn_schema.json  add_nn_source_bess_schema.json  add_nn_source_pv_schema.json  attach_protection_to_cb_schema.json  catalog_binding_schema.json  continue_trunk_segment_sn_schema.json  domain_op_response_schema.json  insert_station_on_segment_sn_schema.json  insert_station_on_segment_sn_v1.json  resultset_v1_schema.json  start_branch_segment_sn_schema.json
mv-design-pro/backend/src/: __init__.py
mv-design-pro/backend/src/analysis/: __init__.py
mv-design-pro/backend/src/api/: analysis_runs.py  analysis_runs_index.py  analysis_runs_read.py  archive_diff.py  batch_execution.py  canonical_run_views.py  case_runs.py  cases.py  catalog.py  celery_app.py  cloud_backup.py  comparison.py  dependencies.py  (+36 more)
mv-design-pro/backend/tests/: __init__.py  catalog_test_helpers.py  conftest.py  test_action_envelope.py  test_apply_action_snapshot.py  test_archive_diff.py  test_batch_execution.py  test_branching_recursion.py  test_bus_alias.py  test_canonical_analysis_api.py  test_canonical_operations_registry.py  test_canonical_ops.py  test_case_runs_api.py  test_catalog_equipment.py  test_catalog_layer.py  test_catalog_materialization.py  test_catalog_materialization_step4_guardians.py  test_ci_guards.py  test_cloud_backup.py  test_diagnostics_diff.py  test_diagnostics_engine.py  test_domain_units.py  test_domain_validation.py  test_e2e_determinism.py  test_element_ref.py  test_eligibility_matrix.py  test_environment.py  test_execution_api.py  test_execution_domain.py  test_execution_engine_load_flow_integration.py  test_export_manifest.py  test_export_reports.py  test_fault_scenario_v2.py  test_fault_scenario_v2_determinism.py  test_fault_scenarios_api.py  test_fault_scenarios_domain.py  test_fault_scenarios_run_integration.py  test_faza6_blocking.py  test_field_device.py  test_generator_validation.py  (+81 more)
(+2009 files in other folders)
